--- a/index.html
+++ b/index.html
@@ -904,11 +904,8 @@
 											<option value="zeckemyro">Zeckemyro</option>
 											<option value="zelda">Zelda</option>
 											<option value="zero_suit_samus">Zero Suit Samus</option>
-											<<<<<<< HEAD <option value="zora">Zora</option>
+											<option value="zora">Zora</option>
 										</select>
-										=======
-										<option value="zora">Zora</option> </select>
-										>>>>>>> upstream/master
 									</td>
 								</tr>
 								<tr>
