--- a/index.html
+++ b/index.html
@@ -650,11 +650,11 @@
 									<option value="dipper">Dipper</option>
 									<option value="discord">Discord</option>
 									<option value="dot_lvl">Dot_lvl</option>
-									<option value="drawcia">Dr. Treymond Spyre Spyreson III</option>
+									<option value="dr_treymond_spyre_spyreson_iii">Dr. Treymond Spyre Spyreson III</option>
 									<option value="dragonair">Dragonair</option>
 									<option value="dragonite">Dragonite</option>
 									<option value="drake_the_dragon">Drake The Dragon</option>
-									<option value="dr_treymond_spyre_spyreson_iii">Drawcia</option>
+									<option value="drawcia">Drawcia</option>
 									<option value="eevee">Eevee</option>
 									<option value="eggplant">Eggplant</option>
 									<option value="eirika">Eirika</option>
